--- a/styles/base.less
+++ b/styles/base.less
@@ -409,4 +409,5 @@ atom-text-editor[mini] .scroll-view {
 .status-bar-vim-mode-plus-visual {
   background-color: @replace-bg;
   color: @replace-color;
+  width: 78.78px;
 }
