--- a/styles/colors.less
+++ b/styles/colors.less
@@ -13,6 +13,8 @@
 @dark-gray: #282a2e;
 @light-gray: #969896;
 
+
+
 // Red
 @red: #ED5151;
 @light-red: #ff7a7a;
@@ -29,6 +31,7 @@
 
 // Green
 @green: #0EFF00;
+@dark-green:
 @light-green: #b5bd68;
 
 // Blue
@@ -43,6 +46,7 @@
 @light-purple: #b294bb;
 
 
+// Status Bar
 
 // Vim colors
 //Normal mode
@@ -61,3 +65,9 @@
 //Replace mode
 @replace-bg: #d80016;
 @replace-color: #FFF;
+
+
+
+// Cursor-position
+@cursor-position-bg: #D1D1D1;
+@cursor-position-color: #626262;
