--- a/styles/syntax-variables.less
+++ b/styles/syntax-variables.less
@@ -5,6 +5,8 @@
 
 // General colors
 @syntax-text-color: @very-light-gray;
+// @syntax-text-color: @green;
+
 @syntax-cursor-color: white;
 @syntax-selection-color: lighten(@dark-gray, 10%);
 @syntax-background-color: @very-dark-gray;
